--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 </head>
 
 <body>
+    <nav>
 
-
+        <ion-icon class="icon" name="menu"></ion-icon>
+        <img id="youtube-logo" src="Images/Youtube-logo.jpg" alt="youtube logo red" name="logo">
+        <input type="search" id="site-search" name="search" label="Search through site content" placeholder="Search">
+        <div id="nav-icons-r">
+            <ion-icon class="icon" id="search-icon" name="search"></ion-icon>
+            <ion-icon class="icon" name="videocam"></ion-icon>
+            <ion-icon class="icon" name="apps-sharp"></ion-icon>
+            <ion-icon class="icon" name="notifications"></ion-icon>
+            <img src="Images/Profile-img.jpeg" id="profile" alt="Profile image" name="profile-image">
+        </div>
+    </nav>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 
 </html>
