--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav id="nav-bar">
             <div id="start">
                 <a href="#">
-                    <ion-icon class="icon" name="menu"></ion-icon>
+                    <ion-icon class="icon" id="menu" name="menu"></ion-icon>
                 </a>
                 <img id="logo" src="Images/Youtube-logo.jpg" alt="youtube logo red">
             </div>
@@ -28,20 +28,19 @@
             </div>
 
             <div id="end">
-                <a href="#">
+                <a href="#" class="end-links">
                     <ion-icon class="icon" name="videocam"></ion-icon>
                 </a>
 
-                <a href="#">
+                <a href="#" class="end-links">
                     <ion-icon class="icon" name="apps-sharp"></ion-icon>
                 </a>
 
-                <a href="#">
+                <a href="#" class="end-links">
                     <ion-icon class="icon" name="notifications"></ion-icon>
                 </a>
 
-
-                <a href="#">
+                <a href="#" class="end-links">
                     <img src="Images/Profile-img.jpeg" id="profile" alt="Profile image" name="profile-image">
                 </a>
 
