added embed vid and made 100vh

--- a/index.html
+++ b/index.html
@@ -43,12 +43,25 @@
                 <a href="#" class="end-links">
                     <img src="Images/Profile-img.jpeg" id="profile" alt="Profile image" name="profile-image">
                 </a>
-
             </div>
-
         </nav>
     </header>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <!-------------VIDEO---->
+    <section>
+        <div>
+            <iframe id="emb-vid" src=" https://www.youtube.com/embed/eLlWywkYaik " frameborder="0 " allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture " allowfullscreen> Your browser does not support the video tag.</iframe>
+        </div>
+    </section>
+    <!--------------GRID---->
+    <section id="grid">
+        <div id="left">
+
+        </div>
+        <div id="right">
+
+        </div>
+    </section>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js "></script>
 </body>
 
 </html>
