completed section one of left side with grid

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+
     <title>YouTube Page</title>
 </head>
 
@@ -55,13 +56,34 @@
     <!--------------GRID---->
     <section id="grid">
         <div id="left">
+            <p id="username">
+                <ion-icon name="egg-sharp"></ion-icon>ДАГОМЫС</p>
+            <h1 class="h1-font">&#128525 Sound of the Sea and Sounds of the Sea, Sea Breeze. Sounds of Nature and Beautiful Sea.</h1>
+            <div id="link-line">
+                <h2 class="h2-font">389,052 views &#149; Premiered Mar 3, 2020</h2>
+                <p class="link-icons">
+                    <ion-icon name="thumbs-up-sharp"></ion-icon>
+                    4.6K</p>
+                <p class="link-icons">
+                    <ion-icon name="thumbs-down-sharp"></ion-icon>148
+                </p>
+                <p class="link-icons">
+                    <ion-icon name="arrow-redo-sharp"></ion-icon>SHARE
+                </p>
+                <p class="link-icons">
+                    <ion-icon name="duplicate-sharp"></ion-icon>SAVE
+                </p>
+                <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
 
+            </div>
+            <div id="thumb-border"></div>
         </div>
-        <div id="right">
 
+        <div id="right">
+            <h2>Up Next</h2>
         </div>
     </section>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js "></script>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 
 </html>
