added to section 2 of left grid

--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
                 <ion-icon name="ellipsis-horizontal-sharp"></ion-icon>
 
             </div>
+
             <div id="thumb-border"></div>
+            <div id="border"></div>
+            <img src="Images/User-logo.jpg" alt="username logo picture yin yang of tree and bird">
+            <h2>Природа Зарисовки</h2>
+            <p>22.8K subscribers</p>
+            <p>SUBSCRIBE US ON https://www.youtube.com/channel/UCtMu... ~ &#128525 The sound of the Sea and the sounds of the Sea, the Sea breeze. Sounds of Nature and the Beautiful Sea, a Shell on the Seashore. Sea for Meditation and Relaxation. 5 Hours
+                of
+            </p>
+            <p>SHOW MORE</p>
         </div>
 
         <div id="right">
