completed info section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <ion-icon name="egg-sharp"></ion-icon>ДАГОМЫС</p>
             <h1 class="h1-font">&#128525 Sound of the Sea and Sounds of the Sea, Sea Breeze. Sounds of Nature and Beautiful Sea.</h1>
             <div id="link-line">
-                <h2 class="h2-font">389,052 views &#149; Premiered Mar 3, 2020</h2>
+                <h2 class="grey-font">389,052 views &#149; Premiered Mar 3, 2020</h2>
                 <p class="link-icons">
                     <ion-icon name="thumbs-up-sharp"></ion-icon>
                     4.6K</p>
@@ -77,15 +77,26 @@
 
             </div>
 
-            <div id="thumb-border"></div>
+            <div id="thick-border"></div>
             <div id="border"></div>
-            <img src="Images/User-logo.jpg" alt="username logo picture yin yang of tree and bird">
-            <h2>Природа Зарисовки</h2>
-            <p>22.8K subscribers</p>
-            <p>SUBSCRIBE US ON https://www.youtube.com/channel/UCtMu... ~ &#128525 The sound of the Sea and the sounds of the Sea, the Sea breeze. Sounds of Nature and the Beautiful Sea, a Shell on the Seashore. Sea for Meditation and Relaxation. 5 Hours
-                of
-            </p>
-            <p>SHOW MORE</p>
+
+            <div id="info-sect">
+                <div>
+                    <img src="Images/User-logo.jpg" alt="username logo picture yin yang of tree and bird">
+                </div>
+                <div class="indent-sect">
+                    <h2>Природа Зарисовки</h2>
+                    <p class="grey-font" id="subscribe-padding">22.8K subscribers</p>
+                    <p class="para">SUBSCRIBE US ON
+                        <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/?sub_confirmation=1">https://www.youtube.com/channel/UCtMu...</a> ~ &#128525 The sound of the Sea and the sounds of the Sea, the Sea breeze. Sounds of Nature and
+                        the Beautiful Sea, a Shell on the Seashore. Sea for Meditation and Relaxation. 5 Hours of </p>
+                    <p class="grey-font" id="show-margin">SHOW MORE</p>
+                </div>
+            </div>
+            <div id="border"></div>
+
+            <div></div>
+            <h2></h2>
         </div>
 
         <div id="right">
