--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
                     <img src="Images/User-logo.jpg" alt="username logo picture yin yang of tree and bird">
                 </div>
                 <div class="indent-sect">
+                    <button type="button" id="subscribe-btn">SUBSCRIBE</button>
                     <h2>Природа Зарисовки</h2>
                     <p class="grey-font" id="subscribe-padding">22.8K subscribers</p>
+
                     <p class="para">SUBSCRIBE US ON
                         <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/?sub_confirmation=1">https://www.youtube.com/channel/UCtMu...</a> ~ &#128525 The sound of the Sea and the sounds of the Sea, the Sea breeze. Sounds of Nature and
                         the Beautiful Sea, a Shell on the Seashore. Sea for Meditation and Relaxation. 5 Hours of </p>
