--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!--------------GRID---->
     <section id="grid">
         <div id="left">
-            <p id="username">
+            <p class="username">
                 <ion-icon name="egg-sharp"></ion-icon>ДАГОМЫС</p>
             <h1 class="h1-font">&#128525 Sound of the Sea and Sounds of the Sea, Sea Breeze. Sounds of Nature and Beautiful Sea.</h1>
             <div id="link-line">
@@ -110,32 +110,39 @@
                 <input type="text" id="input-comment" name="comment" placeholder="Add a public comment...">
             </div>
             <div id="comments">
-                <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw"><img src="Images/User-logo.jpg" alt="username logo picture yin yang of tree and bird">
-                </a>
-                <h3>
-                    <ion-icon name="pin-outline"></ion-icon>Pinned by Природа Зарисовки</h3>
-                <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw">
-                    <h3>Природа Зарисовки</h3>
-                </a>
-                <a href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
-                    <h3>4 months ago</h3>
-                </a>
-                <p>Уважаемый подписчик, - если вам понравилось данное видео, поставьте лайк, и поделись этим видео с друзьями. НАПИШИТЕ ваше мнение под ЭТИМ видео. ЕСЛИ ЕЩЕ НЕ ПОДПИСАНЫ - ПОДПИШИТЕСЬ НА наш КАНАЛ по ссылке: https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/?sub_confirmation=1
-                    И Нажмите на Колокольчик, что бы вам приходило сообщение о новых видео 💡 Мы постоянно выкладываем новые видео ролики, для отдыха, для релаксации, снятия стрессовых состояний и спокойного сна, для восстановления сил, для фона, для
-                    чтения книг, медитации. Чтобы не потерять это видео, нажмите под роликом кнопку добавить в плей лист, и этот ролик появится на Вашем канале. Ссылка на видео, поделитесь с друзьями: https://www.youtube.com/watch?v=eLlWywkYaik Ссылка
-                    на все плейлисты: https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/playlists?view=1&sort=dd&shelf_id=0 Мы в VK: https://vk.com/club129286589 Одноклассники: https://ok.ru/group/55533406912666 #Природазарисовкиютуб #Природазарисовка
-                    #Природазарисовки Благодарю за поддержку канала !!! Шум Моря и Звуки Моря, Морской Бриз. Звуки Природы и Красивое Море, Ракушка на Морском Берегу. Море для Медитации и Релаксации. 5 Часов Видео - На морском берегу ~ 🌊 🎧 Место съемки
-                    - Уч-Дере. Дагомыс. Черноморское побережье. Россия. Плейлисты канала: Волшебные медитации, арт хаус, эмбиент, лаунж, Чилаут, релакс, зву
-                </p>
-                <p class="grey-font" id="show-margin">Read more</p>
+                <div>
+                    <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw"><img src="Images/User-logo.jpg" alt="username logo picture yin yang of tree and bird">
+                    </a>
+                </div>
+                <div class="indent-sect-2">
+                    <h3>
+                        <ion-icon name="pin-outline"></ion-icon>Pinned by Природа Зарисовки</h3>
+                    <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw">
+                        <h3>Природа Зарисовки</h3>
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                        <h3>4 months ago</h3>
+                    </a>
 
-                <p>
-                    <ion-icon name="thumbs-up-sharp"></ion-icon>
-                    23</p>
-                <p class="link-icons">
-                    <ion-icon name="thumbs-down-sharp"></ion-icon>148
-                </p>
-                <p class="grey-font" id="show-margin">REPLY</p>
+                    <p class="para">Уважаемый подписчик, - если вам понравилось данное видео, поставьте лайк, и поделись этим видео с друзьями. НАПИШИТЕ ваше мнение под ЭТИМ видео. ЕСЛИ ЕЩЕ НЕ ПОДПИСАНЫ - ПОДПИШИТЕСЬ НА наш КАНАЛ по ссылке: https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/?sub_confirmation=1
+                        И Нажмите на Колокольчик, что бы вам приходило сообщение о новых видео 💡 Мы постоянно выкладываем новые видео ролики, для отдыха, для релаксации, снятия стрессовых состояний и спокойного сна, для восстановления сил, для фона,
+                        для чтения книг, медитации. Чтобы не потерять это видео, нажмите под роликом кнопку добавить в плей лист, и этот ролик появится на Вашем канале. Ссылка на видео, поделитесь с друзьями: https://www.youtube.com/watch?v=eLlWywkYaik
+                        Ссылка на все плейлисты: https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/playlists?view=1&sort=dd&shelf_id=0 Мы в VK: https://vk.com/club129286589 Одноклассники: https://ok.ru/group/55533406912666 #Природазарисовкиютуб
+                        #Природазарисовка #Природазарисовки Благодарю за поддержку канала !!! Шум Моря и Звуки Моря, Морской Бриз. Звуки Природы и Красивое Море, Ракушка на Морском Берегу. Море для Медитации и Релаксации. 5 Часов Видео - На морском берегу
+                        ~ 🌊 🎧 Место съемки - Уч-Дере. Дагомыс. Черноморское побережье. Россия. Плейлисты канала: Волшебные медитации, арт хаус, эмбиент, лаунж, Чилаут, релакс, зву
+                    </p>
+                    <p class="grey-font" id="show-margin">Read more</p>
+
+                    <p>
+                        <ion-icon name="thumbs-up-sharp"></ion-icon>
+                        23</p>
+                    <p class="link-icons">
+                        <ion-icon name="thumbs-down-sharp"></ion-icon>148
+                    </p>
+                    <p class="grey-font" id="show-margin">REPLY</p>
+                    <h3 class="username">
+                        <ion-icon name="caret-down-sharp"></ion-icon>View 3 replies from Природа Зарисовки and others</h3>
+                </div>
             </div>
 
         </div>
