--- a/index.html
+++ b/index.html
@@ -98,60 +98,142 @@
 
             <div id="border"></div>
 
-            <div id="sort-comment">
+            <div class="sort-comment">
                 <h2>474 Comments</h2>
-                <h2 class="grey-font" id="space-btw">
+                <h2 class="grey-font space-btw">
                     <ion-icon name="options-outline"></ion-icon>SORT BY</h2>
             </div>
-            <div id="add-comment">
+            <div class="add-comment">
                 <a href="#">
-                    <img src="Images/Profile-img.jpeg" id="profile-comment-sect" alt="Profile image" name="profile-image">
+                    <img src="Images/Profile-img.jpeg" class="profile-comment-sect" alt="Profile image" name="profile-image">
                 </a>
-                <input type="text" id="input-comment" name="comment" placeholder="Add a public comment...">
+                <input type="text" class="input-comment" name="comment" placeholder="Add a public comment...">
             </div>
-            <div id="comments">
+            <div class="comments">
                 <div>
                     <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw"><img src="Images/User-logo.jpg" alt="username logo picture yin yang of tree and bird">
                     </a>
                 </div>
                 <div class="indent-sect-2">
-                    <h3>
+
+                    <h3 class="grey-font">
                         <ion-icon name="pin-outline"></ion-icon>Pinned by Природа Зарисовки</h3>
-                    <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw">
-                        <h3>Природа Зарисовки</h3>
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
-                        <h3>4 months ago</h3>
-                    </a>
+                    <div class="user">
+                        <a class="user-btn" href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw">
+                            <h3>Природа Зарисовки</h3>
+                        </a>
 
-                    <p class="para">Уважаемый подписчик, - если вам понравилось данное видео, поставьте лайк, и поделись этим видео с друзьями. НАПИШИТЕ ваше мнение под ЭТИМ видео. ЕСЛИ ЕЩЕ НЕ ПОДПИСАНЫ - ПОДПИШИТЕСЬ НА наш КАНАЛ по ссылке: https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/?sub_confirmation=1
-                        И Нажмите на Колокольчик, что бы вам приходило сообщение о новых видео 💡 Мы постоянно выкладываем новые видео ролики, для отдыха, для релаксации, снятия стрессовых состояний и спокойного сна, для восстановления сил, для фона,
-                        для чтения книг, медитации. Чтобы не потерять это видео, нажмите под роликом кнопку добавить в плей лист, и этот ролик появится на Вашем канале. Ссылка на видео, поделитесь с друзьями: https://www.youtube.com/watch?v=eLlWywkYaik
-                        Ссылка на все плейлисты: https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/playlists?view=1&sort=dd&shelf_id=0 Мы в VK: https://vk.com/club129286589 Одноклассники: https://ok.ru/group/55533406912666 #Природазарисовкиютуб
-                        #Природазарисовка #Природазарисовки Благодарю за поддержку канала !!! Шум Моря и Звуки Моря, Морской Бриз. Звуки Природы и Красивое Море, Ракушка на Морском Берегу. Море для Медитации и Релаксации. 5 Часов Видео - На морском берегу
-                        ~ 🌊 🎧 Место съемки - Уч-Дере. Дагомыс. Черноморское побережье. Россия. Плейлисты канала: Волшебные медитации, арт хаус, эмбиент, лаунж, Чилаут, релакс, зву
-                    </p>
-                    <p class="grey-font" id="show-margin">Read more</p>
+                        <a class="months" href=" https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                            <h3 class="grey-font black">4 months ago</h3>
+                        </a>
+                    </div>
+                    <p class="para">Уважаемый подписчик, - если вам понравилось данное видео, поставьте лайк, и поделись этим видео с друзьями. НАПИШИТЕ ваше мнение под ЭТИМ видео. ЕСЛИ ЕЩЕ НЕ ПОДПИСАНЫ - ПОДПИШИТЕСЬ НА наш КАНАЛ по ссылке:
+                        <a href="https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/?sub_confirmation=1"> https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/?sub_confirmation=1</a> И Нажмите на Колокольчик, что бы вам приходило сообщение о
+                        новых видео 💡 Мы постоянно выкладываем новые видео ролики, для отдыха, для релаксации, снятия стрессовых состояний и спокойного сна, для восстановления сил, для фона, для чтения книг, медитации. Чтобы не потерять это видео, нажмите
+                        под роликом кнопку добавить в плей лист, и этот ролик появится на Вашем канале. Ссылка на видео, поделитесь с друзьями: https://www.youtube.com/watch?v=eLlWywkYaik Ссылка на все плейлисты: https://www.youtube.com/channel/UCtMu4w1fvXlMxh2VXyZGCfw/playlists?view=1&sort=dd&shelf_id=0
+                        Мы в VK: https://vk.com/club129286589 Одноклассники: https://ok.ru/group/55533406912666 #Природазарисовкиютуб #Природазарисовка #Природазарисовки Благодарю за поддержку канала !!! Шум Моря и Звуки Моря, Морской Бриз. Звуки Природы
+                        и Красивое Море, Ракушка на Морском Берегу. Море для Медитации и Релаксации. 5 Часов Видео - На морском берегу ~ 🌊 🎧 Место съемки - Уч-Дере. Дагомыс. Черноморское побережье. Россия. Плейлисты канала: Волшебные медитации, арт
+                        хаус, эмбиент, лаунж, Чилаут, релакс, зву </p>
 
-                    <p>
-                        <ion-icon name="thumbs-up-sharp"></ion-icon>
-                        23</p>
-                    <p class="link-icons">
-                        <ion-icon name="thumbs-down-sharp"></ion-icon>148
-                    </p>
-                    <p class="grey-font" id="show-margin">REPLY</p>
+                    <p class="grey-font margin">Read more</p>
+                    <div class="comment-line">
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-up-sharp"></ion-icon>
+                            23</p>
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-down-sharp"></ion-icon>
+                        </p>
+                        <p class="grey-font">REPLY</p>
+                    </div>
                     <h3 class="username">
-                        <ion-icon name="caret-down-sharp"></ion-icon>View 3 replies from Природа Зарисовки and others</h3>
+                        <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View 3 replies from Природа Зарисовки and others</h3>
                 </div>
             </div>
 
+
+            <div class="comments">
+                <div>
+                    <a href="https://www.youtube.com/channel/UCc8RaKjh6mK_qNVWK68fhQw">
+                        <img src="Images/L.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
+                    </a>
+                </div>
+                <div class="indent-sect-2">
+
+                    <div class="user">
+
+                        <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                            <h3 class="bold black">Linna Linna</h3>
+
+                            <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                                <h3 class="grey-font black">5 days ago (edited)</h3>
+                            </a>
+                    </div>
+                    <p class="para">Помню фильм "Сеньор Робинзон"... - там современный Робинзон на острове из веток сделал себе "экран телевизора ", садился на берегу океана и "смотрел телевизор ", представляя себе, что он дома. А теперь мы садимся перед экраном, включаем
+                        ролик и представляем, что мы на берегу моря... </p>
+
+                    <p class="grey-font margin">Read more</p>
+                    <div class="comment-line">
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-up-sharp"></ion-icon>
+                            4</p>
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-down-sharp"></ion-icon>
+                        </p>
+
+                        <ion-icon class="space" name="earth"></ion-icon>
+
+                        <p class="grey-font">REPLY</p>
+                    </div>
+                    <h3 class="username">
+                        <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
+                </div>
+            </div>
+
+            <div class="comments">
+                <div>
+                    <a href="https://www.youtube.com/channel/UCc8RaKjh6mK_qNVWK68fhQw">
+                        <img src="Images/T.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
+                    </a>
+                </div>
+                <div class="indent-sect-2">
+
+                    <div class="user">
+
+                        <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                            <h3 class="bold black">Thomas Smith</h3>
+
+                            <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                                <h3 class="grey-font black">1 day ago</h3>
+                            </a>
+                    </div>
+                    <p class="para">I walked outside. H-19 caught a mouse. He's off to the crik! </p>
+
+                    <p class="grey-font margin">Read more</p>
+                    <div class="comment-line">
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-up-sharp"></ion-icon>
+                            2</p>
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-down-sharp"></ion-icon>
+                        </p>
+
+                        <ion-icon class="space" name="earth"></ion-icon>
+
+                        <p class="grey-font">REPLY</p>
+                    </div>
+                    <h3 class="username">
+                        <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
+                </div>
+            </div>
         </div>
+
+
 
         <div id="right">
             <h2>Up Next</h2>
         </div>
     </section>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js "></script>
 </body>
 
 </html>
