adding more comments

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <img src="Images/T.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
                     </a>
                 </div>
-                <div class="indent-sect-2">
+                <div class="indent-sect-3">
 
                     <div class="user">
 
@@ -206,13 +206,86 @@
                                 <h3 class="grey-font black">1 day ago</h3>
                             </a>
                     </div>
-                    <p class="para">I walked outside. H-19 caught a mouse. He's off to the crik! </p>
+                    <p class="para">I walked outside. H-19 caught a mouse. He's off to the crik!</p>
 
-                    <p class="grey-font margin">Read more</p>
-                    <div class="comment-line">
+
+                    <div class="comment-line-2">
                         <p class="link-icons">
                             <ion-icon name="thumbs-up-sharp"></ion-icon>
                             2</p>
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-down-sharp"></ion-icon>
+                        </p>
+
+                        <ion-icon class="space" name="earth"></ion-icon>
+
+                        <p class="grey-font">REPLY</p>
+                    </div>
+                    <h3 class="username-2">
+                        <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
+                </div>
+            </div>
+
+            <div class="comments">
+                <div>
+                    <a href="https://www.youtube.com/channel/UCc8RaKjh6mK_qNVWK68fhQw">
+                        <img src="Images/T.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
+                    </a>
+                </div>
+                <div class="indent-sect-3">
+
+                    <div class="user">
+
+                        <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                            <h3 class="bold black">Thomas Smith</h3>
+
+                            <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                                <h3 class="grey-font black">1 day ago</h3>
+                            </a>
+                    </div>
+                    <p class="para">Before you let the world see. Did you know that girl that was the host with the most.🌳</p>
+
+
+                    <div class="comment-line-2">
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-up-sharp"></ion-icon>
+                            1</p>
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-down-sharp"></ion-icon>
+                        </p>
+
+                        <ion-icon class="space" name="earth"></ion-icon>
+
+                        <p class="grey-font">REPLY</p>
+                    </div>
+                    <h3 class="username-2">
+                        <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
+                </div>
+            </div>
+            <div class="comments">
+                <div>
+                    <a href="https://www.youtube.com/channel/UCc8RaKjh6mK_qNVWK68fhQw">
+                        <img src="Images/D.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
+                    </a>
+                </div>
+                <div class="indent-sect-2">
+
+                    <div class="user">
+
+                        <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                            <h3 class="bold black">DIANA MS</h3>
+
+                            <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                                <h3 class="grey-font black">2 weeks</h3>
+                            </a>
+                    </div>
+                    <p class="para">MUCHAS GRACIAS POR SACARNOS DEL ENCIERRO POR LA PANDEMIA Y LLEVARNOS A NUESTRO LUGAR PREFERIDO "EL MAR" NADA MAS RELAJANTE QUE ESE SONIDO! ME HACE RECORDAR EL CARIBE MEXICANO MI AMADO CANCUN</p>
+
+
+                    <div class="comment-line">
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-up-sharp"></ion-icon>
+                            1</p>
                         <p class="link-icons">
                             <ion-icon name="thumbs-down-sharp"></ion-icon>
                         </p>
@@ -225,6 +298,7 @@
                         <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
                 </div>
             </div>
+
         </div>
 
 
