--- a/index.html
+++ b/index.html
@@ -265,6 +265,44 @@
             <div class="comments">
                 <div>
                     <a href="https://www.youtube.com/channel/UCc8RaKjh6mK_qNVWK68fhQw">
+                        <img src="Images/L.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
+                    </a>
+                </div>
+                <div class="indent-sect-2">
+
+                    <div class="user">
+
+                        <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                            <h3 class="bold black">Linna Linna</h3>
+
+                            <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                                <h3 class="grey-font black">5 days ago</h3>
+                            </a>
+                    </div>
+                    <p class="para">
+                        Linna Linna 5 days ago Хочу сказать гостям канала. На этом канале живая энергетика - настоящие съёмки, не картинка. Этот канал лучший...</p>
+
+
+                    <div class="comment-line">
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-up-sharp"></ion-icon>
+                            2</p>
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-down-sharp"></ion-icon>
+                        </p>
+
+                        <ion-icon class="space" name="earth"></ion-icon>
+
+                        <p class="grey-font">REPLY</p>
+                    </div>
+                    <h3 class="username-2">
+                        <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
+                </div>
+            </div>
+
+            <div class="comments">
+                <div>
+                    <a href="https://www.youtube.com/channel/UCc8RaKjh6mK_qNVWK68fhQw">
                         <img src="Images/D.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
                     </a>
                 </div>
@@ -276,7 +314,7 @@
                             <h3 class="bold black">DIANA MS</h3>
 
                             <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
-                                <h3 class="grey-font black">2 weeks</h3>
+                                <h3 class="grey-font black">2 weeks ago</h3>
                             </a>
                     </div>
                     <p class="para">MUCHAS GRACIAS POR SACARNOS DEL ENCIERRO POR LA PANDEMIA Y LLEVARNOS A NUESTRO LUGAR PREFERIDO "EL MAR" NADA MAS RELAJANTE QUE ESE SONIDO! ME HACE RECORDAR EL CARIBE MEXICANO MI AMADO CANCUN</p>
@@ -285,7 +323,7 @@
                     <div class="comment-line">
                         <p class="link-icons">
                             <ion-icon name="thumbs-up-sharp"></ion-icon>
-                            1</p>
+                            3</p>
                         <p class="link-icons">
                             <ion-icon name="thumbs-down-sharp"></ion-icon>
                         </p>
@@ -298,13 +336,60 @@
                         <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
                 </div>
             </div>
+            <div class="comments">
+                <div>
+                    <a href="https://www.youtube.com/channel/UCc8RaKjh6mK_qNVWK68fhQw">
+                        <img src="Images/IMG.jpg" class="profile-pic" alt="username logo picture yin yang of tree and bird">
+                    </a>
+                </div>
+                <div class="indent-sect-3">
 
+                    <div class="user">
+
+                        <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                            <h3 class="bold black">Wee King Tan</h3>
+
+                            <a class="months" href="https://www.youtube.com/watch?v=eLlWywkYaik&lc=UgwK4RV_-V5UIDLDPpZ4AaABAg">
+                                <h3 class="grey-font black">1 day ago</h3>
+                            </a>
+                    </div>
+                    <p class="para">thank you! Now I can enjoy sounds of the sea without being at the seaside!</p>
+
+
+                    <div class="comment-line-2">
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-up-sharp"></ion-icon>
+                            2</p>
+                        <p class="link-icons">
+                            <ion-icon name="thumbs-down-sharp"></ion-icon>
+                        </p>
+
+                        <ion-icon class="space" name="earth"></ion-icon>
+
+                        <p class="grey-font">REPLY</p>
+                    </div>
+                    <h3 class="username-2">
+                        <ion-icon class="arrow-space" name="caret-down-sharp"></ion-icon>View reply from Природа Зарисовки</h3>
+                </div>
+            </div>
         </div>
 
 
 
         <div id="right">
-            <h2>Up Next</h2>
+            <div id="grid-title">
+                <div>
+                    <h2>Up Next</h2>
+                </div>
+                <div id="end">
+                    <h2 class="grey-font">AUTOPLAY</h2>
+                    <label class="switch">
+                    <input type="checkbox">
+                    <span class="slider round"></span>
+                    </label>
+                </div>
+            </div>
+
         </div>
     </section>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js "></script>
