--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             <div id="thick-border"></div>
-            <div id="border"></div>
+            <div class="border"></div>
 
             <div id="info-sect">
                 <div>
@@ -392,8 +392,25 @@
                     </div>
                 </div>
             </div>
+            <div class="video-container">
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/vV3r7_iYU-I" class="video-size" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                    video tag.
+                </iframe>
+                </div>
+                <div class="vid-title">
+                    <h2 class="title-bold">Sounds of Nature &#x0007C; Noise Rivers and Forest Birds- 2 hours</h2>
 
-        </div>
+                    <div>
+                        <h3 class="grey-font title-small">TopRelaxMusic</h3>
+                    </div>
+                    <div>
+                        <h3 class="grey-font title-small">2.7M views &#x000B7; 3 years ago</h3>
+                    </div>
+
+                </div>
+
+            </div>
     </section>
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js "></script>
 </body>
