completed adding videos on right grid

--- a/index.html
+++ b/index.html
@@ -392,41 +392,252 @@
                     </div>
                 </div>
             </div>
-            <div class="video-container">
+            <div class="video-container-1">
+
                 <div class="video">
                     <iframe src="https://www.youtube.com/embed/vV3r7_iYU-I" class="video-size" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
                     video tag.
                 </iframe>
                 </div>
-                <div class="vid-title">
-                    <h2 class="title-bold">Sounds of Nature &#x0007C; Noise Rivers and Forest Birds- 2 hours</h2>
-
-                    <div>
-                        <h3 class="grey-font title-small">TopRelaxMusic</h3>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Sounds of Nature &#x0007C; Noise Rivers and Forest Birds- 2 hours</h2>
                     </div>
                     <div>
-                        <h3 class="grey-font title-small">2.7M views &#x000B7; 3 years ago</h3>
+                        <div>
+                            <h3 class="grey-font title-small">TopRelaxMusic</h3>
+                            <h3 class="grey-font title-small">2.7M views &#x000B7; 3 years ago</h3>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="video-container-2">
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/oHzdu8h3TGc" class="video-size" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Friday Coffee: Good Morning Smooth Jazz - Soothing Jazz Cafe Instrumental Music to Wake Up</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">BGM channel
+                                <ion-icon name="checkmark-circle"></ion-icon>
+                            </h3>
+                            <h3 class="grey-font title-small">913 watching</h3>
+                            <h3 id="live">LIVE NOW</h3>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="video-container">
+
+            <div class="video-container-3">
                 <div class="video">
-                    <iframe src="https://www.youtube.com/embed/vV3r7_iYU-I" class="video-size" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
-                        video tag.
-                    </iframe>
+                    <iframe class="video-size" src="https://www.youtube.com/embed/mJoLPXXWHAE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
                 </div>
-                <div class="vid-title">
-                    <h2 class="title-bold">Sounds of Nature &#x0007C; Noise Rivers and Forest Birds- 2 hours</h2>
-
-                    <div>
-                        <h3 class="grey-font title-small">TopRelaxMusic</h3>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Beautiful Piano Music - Relaxing Music, Study Music, Stress Relief, Sleep Music (Erin) </h2>
                     </div>
                     <div>
-                        <h3 class="grey-font title-small">2.7M views &#x000B7; 3 years ago</h3>
+                        <div>
+                            <h3 class="grey-font title-small">Classio Toledo
+                                <ion-icon name="checkmark-circle"></ion-icon>
+                            </h3>
+                            <h3 class="grey-font title-small">6.4M views&#x000B7; 1 year ago</h3>
+                        </div>
                     </div>
-
                 </div>
+            </div>
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/XMsp0TBTgxQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Ambient Study Music For Focus - 3 Hours of Music for Studying, Concentration and Memory</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">Quiet Quest - Study Music
+                                <ion-icon name="checkmark-circle"></ion-icon>
+                            </h3>
+                            <h3 class="grey-font title-small">495K views &#x000B7; 7 months ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/ec_xGmM_tJc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">The Softest Waves to Relax from Dominicana - Ocean Sounds all Day Long</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">Naturaleza Viva - Sonidos y Paisajes Increíbles
+
+                            </h3>
+                            <h3 class="grey-font title-small">1M views &#x000B7; 8 months ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/cCSkv62weI0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Gentle Noise Seas, Sounds Waves For Sleep and Relaxation 3 Hours 4K Video</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">Tbon Penakc</h3>
+                            <h3 class="grey-font title-small">1.2M views &#x000B7; 1 year ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/OxzG2UMAkRo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Wonderland | Beautiful Chill Mix</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">BLUME</h3>
+                            <h3 class="grey-font title-small">1.5M views &#x000B7; 1 year ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/DGQwd1_dpuc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Relaxing Music with Beautiful Nature - Peaceful Piano & Guitar Music by Soothing Relaxation</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">Soothing Relaxation
+                                <ion-icon name="checkmark-circle"></ion-icon>
+                            </h3>
+                            <h3 class="grey-font title-small">7.8M views &#x000B7; 1 year ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/i8A849ZvOAE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Relaxing Guitar Music, Peaceful Music, Relaxing, Meditation Music, Background Music, ☯2891</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">Yellow Brick Cinema - Relaxing</h3>
+                            <h3 class="grey-font title-small">5.7M views &#x000B7; 3 years ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/cRoZuMNjBf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Музыка Для Массажа - Спа Музыка - Stress Relief Music - Spa Massage Music - Relax Music</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">DOZE OFF MEDUZA / STAV IT SKY</h3>
+                            <h3 class="grey-font title-small">1.1M views &#x000B7; 1 year ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/5lCRsLjMeso" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Sounds of nature, birds singing, Sounds of Forests, for relaxation, sleep, Meditation, Relax 8 hours</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">TopRelaxMusic</h3>
+                            <h3 class="grey-font title-small">15M views &#x000B7; 3 yearas ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/YxfnUPqWV0k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Morning Relaxing Music - Piano Music, Positive Music, Study Music (Madison)</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">OBC Relax Music
+                                <ion-icon name="checkmark-circle"></ion-icon>
+                            </h3>
+                            <h3 class="grey-font title-small">17M views &#x000B7; 2 years ago</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="video-container-3">
+                <div class="video">
+                    <iframe class="video-size" src="https://www.youtube.com/embed/yT1JnPfLpws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>Your browser does not support the
+                        video tag.</iframe>
+                </div>
+                <div>
+                    <div class="vid-title">
+                        <h2 class="title-bold">Música Ultra Relajante Zen con Cuencos Tibetanos | Sonidos Naturales Relajantes para Calmar la Mente</h2>
+                    </div>
+                    <div>
+                        <div>
+                            <h3 class="grey-font title-small">Larry R. Miles</h3>
+                            <h3 class="grey-font title-small">879K views &#x000B7; 2 year ago</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
