fixed nav-end-icons and show more

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
 
             <div id="end">
                 <a href="#" class="end-links">
-                    <ion-icon class="icon" name="videocam"></ion-icon>
+                    <ion-icon class="nav-icon-end" name="videocam"></ion-icon>
                 </a>
 
                 <a href="#" class="end-links">
-                    <ion-icon class="icon" name="apps-sharp"></ion-icon>
+                    <ion-icon class="nav-icon-end" name="apps-sharp"></ion-icon>
                 </a>
 
                 <a href="#" class="end-links">
-                    <ion-icon class="icon" name="notifications"></ion-icon>
+                    <ion-icon class="nav-icon-end" name="notifications"></ion-icon>
                 </a>
 
                 <a href="#" class="end-links">
@@ -642,7 +642,7 @@
         </div>
 
     </section>
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js "></script>
+    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </body>
 
 </html>
